Fixing swagger
