# horusec-account/docs/swagger.json
@@ -1965,7 +1965,22 @@
                                         "content": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/webhook.WebhookResponse"
+                                                "allOf": [
+                                                    {
+                                                        "$ref": "#/definitions/webhook.WebhookResponse"
+                                                    },
+                                                    {
+                                                        "type": "object",
+                                                        "properties": {
+                                                            "headers": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "$ref": "#/definitions/webhook.WebhookHeaders"
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                ]
                                             }
                                         }
                                     }
@@ -2078,7 +2093,22 @@
                                         "content": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/webhook.WebhookResponse"
+                                                "allOf": [
+                                                    {
+                                                        "$ref": "#/definitions/webhook.WebhookResponse"
+                                                    },
+                                                    {
+                                                        "type": "object",
+                                                        "properties": {
+                                                            "headers": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "$ref": "#/definitions/webhook.WebhookHeaders"
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                ]
                                             }
                                         }
                                     }
@@ -2166,7 +2196,22 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/webhook.Webhook"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/webhook.Webhook"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "headers": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/webhook.WebhookHeaders"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     {
@@ -2242,7 +2287,7 @@
                 }
             }
         },
-        "/api/webhook/{companyID}/{webhookID}": {
+        "/api/webhook/{companyID}/{repositoryID}/{webhookID}": {
             "put": {
                 "security": [
                     {
@@ -2267,7 +2312,22 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/webhook.Webhook"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/webhook.Webhook"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "headers": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/webhook.WebhookHeaders"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     {
@@ -2533,15 +2593,26 @@
             "type": "object",
             "properties": {
                 "headers": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/webhook.WebhookHeaders"
                     }
                 },
                 "method": {
                     "type": "string"
                 },
                 "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "webhook.WebhookHeaders": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
                     "type": "string"
                 }
             }
@@ -2556,9 +2627,9 @@
                     "type": "string"
                 },
                 "headers": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/webhook.WebhookHeaders"
                     }
                 },
                 "method": {
